# oanda-algo-trading-basics

./: .clauderc  .env.template  .gitignore  Examples.ipynb  examples.py  oanda_connection.py  pyproject.toml  requirements.txt
brokers/ibkr/: README.md
brokers/ibkr/notebooks/: Examples.ipynb
brokers/oanda/data/: eur_usd_trading_results_20251025_161103.json
brokers/oanda/src/trading/: __init__.py  examples.py  practical_eur_usd_trading_scenario.py
brokers/oanda/src/utils/: config.py
notebooks/: Examples.ipynb
src/: __init__.py  order_management_examples.py  streaming_highfrequency_realtime_data.py
src/oanda_trading/: examples.py  oanda_connection.py
src/utils/: diagnose_oanda.py
