[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oanda-algo-trading-basics"
version = "0.1.0"
description = "Basic OANDA algo trading utilities and examples"
readme = "README.md"
authors = [{ name = "Sean" }]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["oanda_trading*", "utils*"]
exclude = ["tests*"]
